// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom components > custom component base 1`] = `""`;

exports[`custom components > custom component styled 1`] = `""`;

exports[`custom components > custom component utils 1`] = `""`;

exports[`cutsom > custom component case 0 1`] = `""`;

exports[`cutsom > custom component case 1 1`] = `
{
  "subtitle": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
  "tips": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`cutsom > custom component case 2 1`] = `
{
  "checkbox": {
    "base": {
      "css": ".checkbox .wx-checkbox-input {
  width: 34rpx;
  height: 34rpx;
  border-radius: 50%;
}

.checkbox .wx-checkbox-input.wx-checkbox-input-checked {
  background: #0394f0;
  border-color: #0394f0;
}

.checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
  width: 20rpx;
  height: 20rpx;
  line-height: 20rpx;
  text-align: center;
  font-size: 22rpx;
  color: #fff;
  background: transparent;
  transform: translate(-50%, -50%) scale(1);
  -webkit-transform: translate(-50%, -50%) scale(1);
}",
      "cssInJs": {
        ".ice-checkbox .wx-checkbox-input": {
          "borderRadius": "50%",
          "height": "34rpx",
          "width": "34rpx",
        },
        ".ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked": {
          "background": "#0394f0",
          "borderColor": "#0394f0",
        },
        ".ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked::before": {
          "WebkitTransform": "translate(-50%, -50%) scale(1)",
          "background": "transparent",
          "color": "#fff",
          "fontSize": "22rpx",
          "height": "20rpx",
          "lineHeight": "20rpx",
          "textAlign": "center",
          "transform": "translate(-50%, -50%) scale(1)",
          "width": "20rpx",
        },
      },
      "resolvedCss": ".ice-checkbox .wx-checkbox-input {
  width: 34rpx;
  height: 34rpx;
  border-radius: 50%;
}

.ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked {
  background: #0394f0;
  border-color: #0394f0;
}

.ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
  width: 20rpx;
  height: 20rpx;
  line-height: 20rpx;
  text-align: center;
  font-size: 22rpx;
  color: #fff;
  background: transparent;
  transform: translate(-50%, -50%) scale(1);
  -webkit-transform: translate(-50%, -50%) scale(1);
}",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`cutsom > custom component case 3 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`cutsom > custom component case 4 !important 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`cutsom > custom component case 5 !important 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`cutsom > custom component case 6 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`cutsom > custom component case 7 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;
